node/simpleRest/gateway-api/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: http
  namespace: test-1
spec:
  parentRefs:
  - name: simple-apps-gateway
    namespace: test-1-gateway
  hostnames: ["http.test1.redhat.com"]
  rules:
  - backendRefs:
    - name: simple-apps
      port: 8080
